<resources>
    <string name="classification_of_the_animal">Classificação do Animal</string>
    <string name="go">Ir</string>
    <string name="name_of_the_animal">Nome do Animal</string>
    <string name="race_of_the_animal">Raça do Animal</string>
    <string name="type_of_the_animal">Tipo do Animal</string>
    <string name="sex_of_the_animal">Sexo do Animal</string>
    <string name="mother_of_the_animal">Mãe do Animal</string>
    <string name="age_of_the_animal">Idade do Animal</string>
    <string name="reproductive_control">Controle Reprodutivo</string>
    <string name="sanitary_control">Controle Sanitário</string>
    <string name="weight">Peso</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">O email é inválido</string>
    <string name="error_invalid_password">A senha é muito pequena</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">É necessário preencher o campo</string>
    <string name="Monthly_Tasks">Tarefas Mensais</string>
    <string name="name_of_farm">Nome da Propriedade</string>
    <string name="farm">Fazenda</string>
    <string name="see_the_animals">Ver os Animais</string>
    <string name="name_of_owner">Nome do Proprietário</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_perfil_animal">PerfilAnimalActivity</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">VETAjudanteVeterinarioAndroid</string>
</resources>
