<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarah.vetajudanteveterinarioandroid.activity.CadastrarAnimalActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:text="@string/name_of_the_animal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextNomeCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/race_of_the_animal"
        android:layout_below="@+id/editTextNomeCA"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextRacaCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_of_the_animal"
        android:layout_below="@+id/editTextRacaCA"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextTipoCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex_of_the_animal"
        android:layout_below="@+id/editTextTipoCA"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextSexoCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mother_of_the_animal"
        android:layout_below="@+id/editTextSexoCA"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextMaeCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age_of_the_animal"
        android:layout_below="@+id/editTextMaeCA"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextIdadeCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:ems="10"
        android:inputType="number" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonCadastrarAnimalCA"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="continue"
        android:tint="@color/colorPrimaryLight"
        app:backgroundTint="@android:color/holo_red_light"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_add_black_48dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonVoltarMenuCA"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:tint="@android:color/background_light"
        app:srcCompat="@drawable/ic_keyboard_backspace_black_48dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextIdadeCA"
        android:text="@string/classification_of_the_animal" />

    <EditText
        android:id="@+id/editTextClassificacaoCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:inputType="textPersonName" />
</RelativeLayout>
